<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="5dp">

    <TextView
        android:id="@+id/id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/barrier"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/entry_id"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/edit_text_disabled"
        android:editable="false"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/age_label"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/age_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/barrier"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/breed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breed_label"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/barrier"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_custom"
        android:padding="5dp"
        android:singleLine="true"
        android:maxLength="250"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/barrier" />

    <EditText
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="200dp"
        android:padding="5dp"
        android:digits="0123456789"
        android:maxLength="3"
        android:singleLine="true"
        android:inputType="number"
        android:background="@drawable/edit_text_custom"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <EditText
        android:id="@+id/breed"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:singleLine="true"
        android:maxLength="250"
        android:background="@drawable/edit_text_custom"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <Button
        android:id="@+id/add_employee_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="152dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintGuide_percent="0.45"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintTop_toBottomOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintTop_toBottomOf="@+id/guideline7" />

</androidx.constraintlayout.widget.ConstraintLayout>